--- a/chat-service/build.gradle
+++ b/chat-service/build.gradle
@@ -21,8 +21,8 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.mapstruct:mapstruct:1.5.3.Final'
-    implementation 'org.springframework.data:spring-data-mongodb'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.1.0'
