Added RabbitMQ support and optimized message sending

--- a/chat-service/src/main/resources/application.yml
+++ b/chat-service/src/main/resources/application.yml
@@ -3,3 +3,9 @@ spring:
     mongodb:
       database: chat_service
       port: 27017
+
+  rabbitmq:
+    host: localhost
+    port: 61613
+    username: guest
+    password: guest
